解决Swagger版本问题的报错